--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,50 +6,38 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇸🇬_SG_新加坡
-    type: ss
-    server: 54.255.237.136
-    port: 2333
-    password: doub.io
-    cipher: aes-256-cfb
-  - &id002
-    name: 🇱🇻_LV_拉脱维亚
-    type: ss
-    server: 185.135.86.173
-    port: 9001
-    password: UkXRsXvR6buDMG2Y
-    cipher: aes-256-cfb
-  - &id003
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_1
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 104.26.10.183
-    port: 2095
+    server: 162.159.134.12
+    port: 80
     cipher: auto
-    uuid: f25a0058-37be-4849-90b7-806d7cc8bf38
+    uuid: 79691050-5798-42ce-a93c-1ad585983823
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /@hkaa0
+      path: /blue
       headers:
-        host: sg.wyhkaa0.tk
-  - &id004
-    name: 🇯🇵_JP_日本_1
-    type: trojan
-    server: spjp.1234567890spcloud.com
-    port: 443
-    udp: true
-    password: 69b5b7ab-d67e-4f5e-8a44-2cc93737b5e6
+        host: el.kapacloud.eu.org
+  - &id002
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 64.32.20.97
+    port: 40039
+    cipher: auto
+    uuid: c1bad9a6-1482-4941-a0c4-e85f3cbbcb5a
+    alterId: 64
+    tls: false
     skip-cert-verify: true
     network: tcp
-  - &id005
-    name: 🇺🇸_US_美国_1
+  - &id003
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 104.16.110.60
+    server: 141.101.123.144
     port: 2086
     cipher: auto
-    uuid: dac9cf36-ff4c-4d90-d549-d39086e75088
+    uuid: eb943c5b-ac55-46f9-8710-d0641c38ae9b
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -57,46 +45,76 @@ proxies:
     ws-opts:
       path: /qwer
       headers:
-        host: ylks.vtcss.top
+        host: uxx.vtcss.top
+  - &id004
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 162.159.250.183
+    port: 2086
+    cipher: auto
+    uuid: eb943c5b-ac55-46f9-8710-d0641c38ae9b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: uxx.vtcss.top
+  - &id005
+    name: 🇨🇷_CR_哥斯达黎加->🇺🇸_US_美国_1
+    type: vmess
+    server: cf5.992688.xyz
+    port: 8080
+    cipher: auto
+    uuid: b0b12ae2-346c-488b-8d1e-9f3afb8fead5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: hax.992688.xyz
   - &id006
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_1
     type: vmess
-    server: qzcn2-01.dajuzi.cc
-    port: 15598
+    server: 162.159.43.104
+    port: 80
     cipher: auto
-    uuid: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
+    uuid: 79691050-5798-42ce-a93c-1ad585983823
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: el.kapacloud.eu.org
   - &id007
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
-    type: vmess
-    server: qzcn2-01.dajuzi.cc
-    port: 15596
-    cipher: auto
-    uuid: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
+    name: 🇯🇵_JP_日本
+    type: ss
+    server: 43.207.74.136
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
   - &id008
-    name: 🇨🇾_CY_塞浦路斯->🇳🇱_NL_荷兰
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_2
     type: vmess
-    server: mci.saintink.eu.org
+    server: 104.24.147.6
     port: 443
     cipher: auto
-    uuid: c226d9fa-b5a7-4f6e-9532-50137c89311d
+    uuid: 79691050-5798-42ce-a93c-1ad585983823
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: nl1.v2rayserv.com/vmess
+      path: /blue
       headers:
-        host: 4.saintink.eu.org
+        host: el.kapacloud.eu.org
   - &id009
-    name: 🇺🇸_US_美国_2
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: 173.245.58.94
     port: 80
@@ -111,9 +129,194 @@ proxies:
       headers:
         host: ylks.vtcss.top
   - &id010
-    name: 🇺🇸_US_美国_3
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: 198.41.206.174
+    server: 142.4.97.75
+    port: 44942
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 104.18.110.194
+    port: 2086
+    cipher: auto
+    uuid: dac9cf36-ff4c-4d90-d549-d39086e75088
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: ylks.vtcss.top
+  - &id012
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 162.159.8.172
+    port: 2082
+    cipher: auto
+    uuid: f4c2c162-0fc4-4455-d862-2b24aebce347
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: uxx.vtcss.top
+  - &id013
+    name: 🇨🇷_CR_哥斯达黎加->🇰🇷_KR_韩国
+    type: vmess
+    server: 190.93.244.62
+    port: 80
+    cipher: auto
+    uuid: 79691050-5798-42ce-a93c-1ad585983823
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: kr.kapacloud.eu.org
+  - &id014
+    name: 🇺🇸_US_美国->🇰🇷_KR_韩国_1
+    type: vmess
+    server: 104.19.95.33
+    port: 443
+    cipher: auto
+    uuid: 79691050-5798-42ce-a93c-1ad585983823
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: kr.kapacloud.eu.org
+  - &id015
+    name: 🇺🇸_US_美国->🇰🇷_KR_韩国_2
+    type: vmess
+    server: 162.159.15.151
+    port: 443
+    cipher: auto
+    uuid: 79691050-5798-42ce-a93c-1ad585983823
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: kr.kapacloud.eu.org
+  - &id016
+    name: 🇺🇸_US_美国->🇰🇷_KR_韩国_3
+    type: vmess
+    server: 104.16.122.37
+    port: 443
+    cipher: auto
+    uuid: 79691050-5798-42ce-a93c-1ad585983823
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: kr.kapacloud.eu.org
+  - &id017
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 140.99.49.55
+    port: 55602
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_3
+    type: vmess
+    server: 104.20.195.124
+    port: 443
+    cipher: auto
+    uuid: 79691050-5798-42ce-a93c-1ad585983823
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: el.kapacloud.eu.org
+  - &id019
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 173.249.199.27
+    port: 443
+    cipher: auto
+    uuid: e5543efd-5400-3760-9bb6-02767728e888
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video
+  - &id020
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_1
+    type: vmess
+    server: 104.25.79.213
+    port: 2095
+    cipher: auto
+    uuid: f25a0058-37be-4849-90b7-806d7cc8bf38
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@hkaa0
+      headers:
+        host: sg.wyhkaa0.tk
+  - &id021
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_2
+    type: vmess
+    server: 173.245.59.165
+    port: 2095
+    cipher: auto
+    uuid: f25a0058-37be-4849-90b7-806d7cc8bf38
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@hkaa0
+      headers:
+        host: sg.wyhkaa0.tk
+  - &id022
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 198.41.220.8
+    port: 2086
+    cipher: auto
+    uuid: dac9cf36-ff4c-4d90-d549-d39086e75088
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: ylks.vtcss.top
+  - &id023
+    name: 🇨🇷_CR_哥斯达黎加->🇺🇸_US_美国_2
+    type: vmess
+    server: 190.93.244.104
     port: 2053
     cipher: auto
     uuid: 3a73acf2-c7e3-43b9-fca9-bdd2eb886186
@@ -125,33 +328,26 @@ proxies:
       path: /qwer
       headers:
         host: ylks.vtcss.top
-  - &id011
-    name: 🇺🇸_US_美国_4
+  - &id024
+    name: 🇺🇸_US_美国_12
     type: vmess
-    server: 64.32.4.47
-    port: 43166
+    server: 104.20.184.232
+    port: 2086
     cipher: auto
-    uuid: 8653004f-de67-44c2-9cce-e0830933fb03
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇭🇰_HK_香港
-    type: vmess
-    server: 8.210.154.114
-    port: 40447
-    cipher: auto
-    uuid: da8c9ac2-39de-4bed-ee9f-4e4340ade47d
+    uuid: eb943c5b-ac55-46f9-8710-d0641c38ae9b
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇧🇷_BR_巴西->🇩🇪_DE_德国
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: uxx.vtcss.top
+  - &id025
+    name: 🇧🇷_BR_巴西->🇳🇱_NL_荷兰
     type: vmess
-    server: dearmb.76898102.xyz
-    port: 2052
+    server: nlawggbvfgerhtg.76898102.xyz
+    port: 2082
     cipher: auto
     uuid: 4896559c-c94e-342a-b208-6107ec292652
     alterId: 0
@@ -159,10 +355,112 @@ proxies:
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /ancihgrt
+      path: /fwadfbbg
       headers:
-        host: dearmb.76898102.xyz
-  - &id014
+        host: nlawggbvfgerhtg.76898102.xyz
+  - &id026
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_3
+    type: vmess
+    server: 104.26.10.183
+    port: 2095
+    cipher: auto
+    uuid: f25a0058-37be-4849-90b7-806d7cc8bf38
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@hkaa0
+      headers:
+        host: sg.wyhkaa0.tk
+  - &id027
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 104.19.247.38
+    port: 2082
+    cipher: auto
+    uuid: f4c2c162-0fc4-4455-d862-2b24aebce347
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: uxx.vtcss.top
+  - &id028
+    name: 🇸🇬_SG_新加坡_1
+    type: ss
+    server: weo-sg-2.laowufly.cf
+    port: 12345
+    password: NodeByTG@Weoworks/GFW绕过我吧...
+    cipher: aes-128-gcm
+  - &id029
+    name: 🇭🇰_HK_香港_1
+    type: vmess
+    server: adobe4.fmmmz1.com
+    port: 80
+    cipher: auto
+    uuid: 6cc1136b-1cfb-34b0-90d6-726bac4d0f34
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /adobe
+      headers:
+        host: adobe4.fmmmz1.com
+  - &id030
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 162.159.50.55
+    port: 8880
+    cipher: auto
+    uuid: d7ca2363-81c2-43a0-f141-352815da3ac3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: uxx.vtcss.top
+  - &id031
+    name: 🇰🇷_KR_韩国_1
+    type: trojan
+    server: kr3.yihaobao.xyz
+    port: 10051
+    udp: true
+    password: 6ba99583-9730-48f9-aadf-7293c69e60a1
+    skip-cert-verify: true
+    network: tcp
+  - &id032
+    name: 🇭🇰_HK_香港_2
+    type: vmess
+    server: hk1.594888.xyz
+    port: 2443
+    cipher: auto
+    uuid: fc69221c-dc02-33c6-8c98-3ff06596029f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /maohk3
+      headers:
+        host: hk1.594888.xyz
+  - &id033
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: 192.74.228.185
+    port: 42857
+    cipher: auto
+    uuid: 051b844f-efe3-4847-92aa-66b5de0b6d4e
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id034
     name: 🇫🇷_FR_法国->🇺🇸_US_美国
     type: vmess
     server: 173.245.49.115
@@ -177,279 +475,29 @@ proxies:
       path: /qwer
       headers:
         host: ylks.vtcss.top
-  - &id015
-    name: 🇯🇵_JP_日本_2
+  - &id035
+    name: 🇰🇷_KR_韩国_2
     type: ss
-    server: 54.199.83.239
-    port: 2333
-    password: doub.io
+    server: 43.202.55.210
+    port: 443
+    password: amazonskr05
     cipher: aes-256-cfb
-  - &id016
-    name: 🇺🇸_US_美国_5
+  - &id036
+    name: 🇸🇬_SG_新加坡_2
     type: vmess
-    server: 107.167.16.34
-    port: 45592
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 162.159.247.37
-    port: 80
-    cipher: auto
-    uuid: 298530df-8418-4bc6-bff2-eeee595bf5cd
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: ylks.vtcss.top
-  - &id018
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 192.74.228.185
-    port: 42857
-    cipher: auto
-    uuid: 051b844f-efe3-4847-92aa-66b5de0b6d4e
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 104.18.110.194
-    port: 2086
-    cipher: auto
-    uuid: dac9cf36-ff4c-4d90-d549-d39086e75088
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: ylks.vtcss.top
-  - &id020
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 104.19.97.1
-    port: 2053
-    cipher: auto
-    uuid: 3a73acf2-c7e3-43b9-fca9-bdd2eb886186
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: ylks.vtcss.top
-  - &id021
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 192.3.150.233
-    port: 8443
-    cipher: auto
-    uuid: a6a37e04-5e81-44c9-be53-baa3ff46eb8b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /8cda48b3
-  - &id022
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: 162.159.36.24
-    port: 2053
-    cipher: auto
-    uuid: 3a73acf2-c7e3-43b9-fca9-bdd2eb886186
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: ylks.vtcss.top
-  - &id023
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: 173.245.59.198
-    port: 2086
-    cipher: auto
-    uuid: dac9cf36-ff4c-4d90-d549-d39086e75088
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: ylks.vtcss.top
-  - &id024
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: 173.245.58.237
-    port: 2053
-    cipher: auto
-    uuid: 3a73acf2-c7e3-43b9-fca9-bdd2eb886186
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: ylks.vtcss.top
-  - &id025
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: 198.41.196.38
-    port: 80
-    cipher: auto
-    uuid: 298530df-8418-4bc6-bff2-eeee595bf5cd
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: ylks.vtcss.top
-  - &id026
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: 104.27.96.113
-    port: 2053
-    cipher: auto
-    uuid: 3a73acf2-c7e3-43b9-fca9-bdd2eb886186
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: ylks.vtcss.top
-  - &id027
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 45.144.179.138
+    server: sg1.594888.xyz
     port: 443
     cipher: auto
-    uuid: 96cbe4a6-5728-42df-dc7a-ceb9b51a3db5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id028
-    name: 🇺🇸_US_美国_16
-    type: vmess
-    server: ahsorathiyaa.fly.dev
-    port: 443
-    cipher: auto
-    uuid: de04add9-5c68-8bab-950c-08cd5320df18
+    uuid: fc69221c-dc02-33c6-8c98-3ff06596029f
     alterId: 0
     tls: true
     skip-cert-verify: true
+    servername: sg1.594888.xyz
     network: ws
     ws-opts:
-      path: /vmess
+      path: /hls/us8.m3u8
       headers:
-        host: ahsorathiyaa.fly.dev
-  - &id029
-    name: 🇺🇸_US_美国_17
-    type: vmess
-    server: 104.20.185.104
-    port: 80
-    cipher: auto
-    uuid: 298530df-8418-4bc6-bff2-eeee595bf5cd
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: ylks.vtcss.top
-  - &id030
-    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国
-    type: trojan
-    server: pqawszf.aiopen.cfd
-    port: 443
-    udp: true
-    password: 7ad2a5e0-906b-4b3e-97bb-b5f3992cb19d
-    sni: us1.pqjc.site
-    skip-cert-verify: true
-    network: tcp
-  - &id031
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_2
-    type: vmess
-    server: 104.25.79.213
-    port: 2095
-    cipher: auto
-    uuid: f25a0058-37be-4849-90b7-806d7cc8bf38
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@hkaa0
-      headers:
-        host: sg.wyhkaa0.tk
-  - &id032
-    name: 🇺🇸_US_美国_18
-    type: vmess
-    server: 141.101.120.126
-    port: 2086
-    cipher: auto
-    uuid: dac9cf36-ff4c-4d90-d549-d39086e75088
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: ylks.vtcss.top
-  - &id033
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_3
-    type: vmess
-    server: 173.245.59.165
-    port: 2095
-    cipher: auto
-    uuid: f25a0058-37be-4849-90b7-806d7cc8bf38
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@hkaa0
-      headers:
-        host: sg.wyhkaa0.tk
-  - &id034
-    name: 🇺🇸_US_美国_19
-    type: vmess
-    server: 162.159.50.55
-    port: 8880
-    cipher: auto
-    uuid: d7ca2363-81c2-43a0-f141-352815da3ac3
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: uxx.vtcss.top
+        host: sg1.594888.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -510,6 +558,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -549,6 +599,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -586,6 +638,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
